k8s_arch/library/labs/gateway-nginx/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx-gateway
    sectionName: http
  rules:
  - backendRefs:
    - name: frontend-svc
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: "/"
